Make sure the 3 boxes the group info box are aligned.
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/trunk@2586 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -893,13 +893,14 @@ table.alt_table .desc {
 table.alt_table .standout {
 	border: 1px dotted #999999;
 	margin: 0.2em 0;
-	padding: 0.5em 0.6em;
+	padding: 0.4em 0.6em;
 	background-color: #FFFFCC;
 	text-align: left;
 	line-height: 1;
 	font-size: 93%;
 	font-weight: bold;
 	color: #333333;
+	width: 360px;
 }
 
 table.alt_table tr td.contributable {
